syntax = "proto3";

package post;

// Define the Post service
service PostService {
  rpc CreatePost (PostRequest) returns (PostResponse);
  rpc GetPost (PostId) returns (PostResponse);
  rpc UpdatePost (PostRequest) returns (PostResponse);
  rpc DeletePost (PostId) returns (PostResponse);
}
// Define the PostRequest
message PostRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}
// Define the PostResponse
message PostResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}

message PostId {
  string id = 1;
}
